client/src/components/NavBar/navbar.css
.navbar1 {
    background-color: black;
    margin: 0 auto;
    text-align: center;
    font-family: Brush Script MT, cursive;
    font-size: large;
    text-decoration: none;
    height: 10vh;

}

.navbar2 {
    display: flex !important;
    justify-content: space-around !important;
    align-items: center;
    height: 100% !important;
}

.navbar3 {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    padding: 0 20px;
}

.navbar3 a {
    display: flex;
}

.navbar1 a {
    display: flex;
    color: white;
    font-size: 20px;
    height: 100%;
    text-decoration: none;
    padding: 0 20px;
    transition: all 0.35 ease;
}

.links {
    display: flex;
    height: 100%;
}

.link {
    align-items: center;
    padding-top: 50vh;
}


.navbar1 a:hover {
    color: #ffeba7;
    border-bottom: 2px solid #ffeba7;
}

.logout-button {
    background-color: #FF5733; /* Unique color scheme */
    border: none;
    border-radius: 8px;
    padding: 6px;
    color: #fff;
    cursor: pointer;
    transition: all 0.2s ease;
    font-family: 'Times New Roman';
    font-size: small;
  }
  

